Fix jumplist colours, especially for light variant.

--- a/MaterialSkin/HTML/material/html/css/dark.css
+++ b/MaterialSkin/HTML/material/html/css/dark.css
@@ -63,3 +63,7 @@ div.v-rating i.primary--text, div.v-rating i.accent--text {
 .np-rating-shadow {
     text-shadow: 2px 2px 5px #222;
 }
+
+.lms-jumplist {
+ background-color:#484848;
+}
